# parseltongue-speech

./: .gitignore  README.md  flake.nix  generator.nix  processor.nix  speak  speak.sh
code/filter/: extract-code.py  pangu.py
code/font/: minimize.py  overwrite.py
code/generator/: parseltongue.cabal
code/generator/src/: Page.hs  Style.hs
content/: 2020-06-12-nix-things.md  2020-09-10-nix-hidden-things.md
docs/: index.html  posts.html
docs/article/: 2020-06-08-nixos-things.html  2020-06-12-nix-things.html  2020-09-10-nix-hidden-things.html  2020-11-02-string-context.html  2020-12-17-string-context.html
docs/static/: gruvbox-highlight.css  script.js  style.css
markdown/: 2020-06-12-nix-things.md  2020-09-10-nix-hidden-things.md  2020-12-17-string-context.md
src/: Gruvbox.hs  Main.hs  Page.hs  Style.hs  Utils.hs
