cabal-version: 2.4
name: parseltongue
version: 0.1.0.0
license: BSD-3-Clause
maintainer: your@email
author: Your Name
category: Web

executable speech
    main-is: Main.hs
    other-modules:
        Gruvbox
        Style
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options:
        -Wall
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
    build-depends:
        base,
        aeson,
        clay,
        lucid,
        filepath,
        rib ^>=0.11,
        shake,
        text,
        with-utf8,
        text-show,
        time,
        regex-pcre,
        pandoc
